[project]
name = "us-household-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "PavelMakarchuk", email = "pavel.ma99@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
us-household-demo = "us_household_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
